# microscope

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: coder.md  quality-checker.md  tester.md
docs/: EXPERIMENTS.md  PHASE1_RETROSPECTIVE.md  PROGRESS.md  REPORT.md  RULES.md  SETUP_GPU.md
docs/adr/: 0000-template.md  0001-model-and-tooling-choices.md  0002-runtime-and-gpu-host.md  0003-modal-execution-and-activation-recipe.md  0004-training-library-sparsify.md  0005-controls-design.md  0006-circuit-method.md  0007-saebench-adapter.md  0008-multilayer-circuit.md  0009-multiconcept-leakfree-and-stats.md
experiments/configs/: gemma2_2b_reproduce.yaml  pythia70m_smoke.yaml  train_gemma2_2b_l12.yaml  train_pythia70m_smoke.yaml
infra/: modal_app.py
scripts/: aggregate_controls.py  demo.sh  headtohead_autointerp.py
src/microscope/: __init__.py  _pending.py  activations.py  cli.py  config.py
src/microscope/autointerp/: __init__.py  run.py
src/microscope/circuits/: __init__.py  discover.py
src/microscope/eval/: __init__.py  controls.py  reconstruction.py  saebench.py
src/microscope/reproduce/: __init__.py  gemma_scope.py
src/microscope/saes/: __init__.py  train.py
src/microscope/steering/: __init__.py  baselines.py
tests/: conftest.py  test_cli.py  test_config_hash.py  test_determinism.py  test_experiment_log.py  test_load_config.py  test_metadata.py  test_pending.py  test_reconstruction_metrics.py  test_reproduction_gate.py  test_steering_baselines.py  test_stub_gates.py  test_train_coder.py
