[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microscope"
version = "0.1.0"
description = "Reproducible mechanistic-interpretability toolkit: SAEs, transcoders, auto-interp, SAEBench, circuits, and adversarial controls on a small open model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "madhavcodez" }]
keywords = ["mechanistic-interpretability", "sparse-autoencoder", "transcoder", "saebench", "gemma"]

# Base deps: light, pure-Python, so `pip install -e .` works on any machine (CPU dev box included)
# and the CLI + config/determinism layer is usable without the heavy ML stack.
dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "rich>=13.0",
]

[project.optional-dependencies]
# Heavy ML runtime. Install on the GPU host (Python 3.11 recommended, see docs/adr/0002).
# NOTE (E4): dictionary_learning, delphi, sae-bench, and sparse-feature-circuits are installed
# from source on the GPU host, NOT pinned here, because their exact install/API must be verified
# against the live package before wiring (RULES.md E4). This extra lists only the PyPI-resolvable
# pieces; the source installs are documented in README.md "GPU host setup".
gpu = [
  "torch>=2.2",
  "transformers>=4.44",
  "datasets>=2.20",
  "nnsight>=0.3",
  "sae-lens>=4.0",
  "einops>=0.7",
  "safetensors>=0.4",
  "tqdm>=4.66",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
microscope = "microscope.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer.Option(...) / typer.Argument(...) in parameter defaults is the intended Typer idiom, not the
# mutable-default-arg footgun B008 targets.
"src/microscope/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
